--- a/mystaticFiles/css/manage.css
+++ b/mystaticFiles/css/manage.css
@@ -5,12 +5,26 @@ body {
     box-sizing: border-box;
 }
 
+/* header {
+  position: absolute;
+  box-sizing: border-box;
+  box-shadow: -10px 15px 20px red;
+  border-radius: 10px;
+  margin-left: 280px;
+  /* padding-left: 40px;
+  padding-right: 80px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+} */
+
+
+
 .dashboard_detail {
     height: 100vh;
     width: 20%;
     margin: 0;
-    background-color: white;
-    box-shadow: 5px 0 5px #696969;
+    background-color: #343434;
+    box-shadow: 5px 0 5px #000;
     float: left;
 }
 
@@ -18,7 +32,7 @@ body {
     font-size: 30px;
     text-align: center;
     padding-top: 10px;
-    color: blue;
+    color: #fff;
 }
 
 .admin_links {
@@ -26,10 +40,15 @@ body {
     padding-top: 40px;
 }
 
+/* .link_container {
+  margin-bottom: 5px;
+  background-color: rgba(0,0,0,0.1);
+} */
+
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #343434;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -37,7 +56,7 @@ body {
 
 .dropdown-content a {
     float: none;
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -45,7 +64,8 @@ body {
   }
 
   .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: #334343;
+    color: #03a9f4;
   }
 
   .dropdown:hover .dropdown-content {
@@ -57,59 +77,52 @@ body {
     border: none;
     width: 97%;
     text-align: left;
-    font-size: 15px;
-    color: #393939;
+    font-size: 20px;
+    color: #fff;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding-top: 10px;
+     padding-top: 10px;
     padding-bottom: 10px;
-    border-style: none none solid none;
-    border-width: 1px;
+    /* border-style: none none solid none;
+    border-width: 1px; */
     /* box-shadow: -2px 2px 5px #696969; */
 }
 
-.dropbtn:hover {
-    color: white;
-    background-color: rgba(5, 46, 182, 0.5);
-}
-
-.admin-links {
-    list-style-type: disc;
-  }
-
-  #Collect_Money {
+  #Collect_Money { 
     text-decoration: none;
-    font-size: 15px;
-    color: #393939;
+    font-size: 20px;
+    color: #fff;
     text-align: center;
     width: 100%;
     height: 110px;
-    padding-right: 90px;
+    /* padding-right: 115px;
     padding-top: 10px;
     padding-bottom: 10px;
-    /* box-shadow: -2px 2px 5px #696969; */
-    margin-bottom: 10px;
-    border-style: none none solid none;
-    border-width: 1px;
+    box-shadow: 0px 2px 2px #000; */
+    /* margin-bottom: 10px; */
+    /* border-style: none none solid none;
+    border-width: 1px; */
 }
 
 #Sign_Out {
+    /* background-color: rgba(0, 0, 0, 0.1); */
     text-decoration: none;
-    font-size: 15px;
-    color: #393939;
+    font-size: 20px;
+    color: #fff;
     text-align: center;
     width: 100%;
     height: 110px;
-    padding-right: 131px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    /* box-shadow: -2px 2px 5px #696969;*/
-    border-style: none none solid none;
-    border-width: 1px;
+    min-height: 100px;
+    /* padding-right: 131px; */
+    /* padding-top: 10px;
+    padding-bottom: 10px; */
+    /* box-shadow: 0px 2px 2px #000; */
+    /* border-style: none none solid none;
+    border-width: 1px; */
 } 
 
 #Collect_Money:hover, #Sign_Out:hover {
-  color: white;
-  background-color: rgba(5, 46, 240, 0.5);
+  color: #03a9f4;
+  background-color: transparent;
 }
 
 .main_detail_container {
@@ -118,9 +131,9 @@ body {
   top: 10%;
   margin-right: 20px;
   box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0,0,0,.5);
+  box-shadow: -10px 15px 20px rgba(0,0,0,.5);
   border-radius: 10px;
-  margin-left: 250px;
+  margin-left: 280px;
   padding-left: 40px;
   padding-right: 80px;
   padding-bottom: 20px;
