add functionality in news_manager of news_delete,, improve news_manager and fix bugs and add all functionalities in collage_manager like add, edit, delete

--- a/mystaticFiles/css/manage.css
+++ b/mystaticFiles/css/manage.css
@@ -261,4 +261,12 @@ input:checked [type="checkbox"] {
   background-color: #03a9f4;
 }
 
+#deleteConfDialogbox{
+  position: fixed;
+  left: 40%;
+  top: 40%;
+  background-color: #4867e0;
+  padding: 10px;
+}
+
 
