--- a/mystaticFiles/css/manage.css
+++ b/mystaticFiles/css/manage.css
@@ -141,8 +141,8 @@ body {
 }
 
 #profile_image {
-  width: 150px;
-  height: 150px;
+  width: 80px;
+  height: 80.px;
   padding-left: 50px;
   padding-top: 20px;
 }
