Added backend to event_detail page in eventWebSite

--- a/mystaticFiles/css/event_detail.css
+++ b/mystaticFiles/css/event_detail.css
@@ -118,3 +118,16 @@ body{
 .child_event_list {
     list-style: none;
 }
+
+
+/*===============================================================================================*/
+
+.eventDetailWrapper{
+    display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,.1);
+}
