--- a/mystaticFiles/css/participant_dashboard.css
+++ b/mystaticFiles/css/participant_dashboard.css
@@ -3,6 +3,8 @@ body{
     padding: 0px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     box-sizing: border-box;
+    background-image: url(../media/bck_p_dash.jfif);
+    z-index: 0;
 }
 
 .basic{
@@ -57,22 +59,174 @@ body{
     margin-right: 100px;
 }
 
-#profile_btn {
-    width: 150px;
-    height: 50px;
-    font-size: 120%;
-    border-radius: 0;
-    background-image: linear-gradient(to right, #4867e0 60%, #329fec);
-    border: none;
-    color: white;
+
+
+/* DASHBOARD AND LOGOUT DROPDOWN */
+.dropdown {
+    display: inline-block;
+    position: relative;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+.dropdown button {
+    border: none;
+    padding: 15px 40px;
+    background-color: #329fec;
+    color: white;
+    transition: .3s;
+    font-size: 20px;
+}
+
+.dropdown button:hover {
+    background-color: #329fec;
+}
+
+.dropdown div a {
+    display: block;
+    text-decoration: none;
+    padding: 8px;
+    color: #000;
+}
+
+.dropdown div {
+    background-color: #fff;
+    box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.2);
     z-index: 1;
-  }
-  
+    visibility: hidden;
+    position: absolute;
+    min-width: 100%;
+    opacity: 0;
+    transition: .3s;
+}
+
+.dropdown:hover div {
+    visibility: visible;
+    opacity: 1;
+}
+
+.dropdown div a:hover {
+    color: #329fec;
+}
+
+
+
+/* REAMRK AND PAYMENT DIVISION  */
+.remark_div {
+    padding-left: 8%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 5%;
+    /* background-color: #329fec; */
+    border-radius: 15px;
+    box-shadow: 0px 4px 2px white;
+    color: white;
+    font-size: 20px;
+}
+
+.payment_div {
+    padding-left: 8%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 5%;
+    /* background-color: #329fec; */
+    border-radius: 15px;
+    box-shadow: 0px 4px 2px white;
+    color: white;
+    font-size: 20px;
+}
+
+
+
+/* EVENT STATUS TITLE CONTAINER */
+.event_status_table_title {
+    text-align: center;
+    font-size: 50px;
+    color: #fff;
+    margin-top: 4%;
+}
+
+
+
+/* EVENT STATUS TABLE */
+* {
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	list-style: none;
+	text-decoration: none;
+}
+
+.middle {
+	position: absolute;
+	top: 105%;
+	left: 18.5%;
+	transform: translate(-50%, -50%);
+}
+
+.menu {
+	width: 800%;
+	border-radius: 8px;
+	overflow: hidden;
+}
+
+.item {
+	border-top: 1px solid #2980b9;
+	overflow: hidden;
+}
+
+.btn {
+	display: block;
+	padding: 16px 20px;
+	background-color: #3498db;
+	color: white;
+}
+
+.btn:before {
+	content: "";
+	position: absolute;
+	width: 14px;
+	height: 14px;
+	background-color: #3498db;
+	left: 20px;
+	bottom: -7px;
+	transform: rotate(45deg);
+}
+
+.smenu {
+	background-color: #333;
+	overflow: hidden;
+	transition: max-height 1s;
+	max-height: 0;
+}
+
+.smenu a {
+	display: block;
+	padding: 16px 26px;
+	color: white;
+	font-size: 14px;
+	margin: 4px;
+	position: relative;
+}
+
+.smenu a:before {
+	content: "";
+	position: absolute;
+	width: 6px; 
+	height: 100%;
+	background: #3498db;
+	left: 0;
+	top: 0;
+	transition: 0.01s;
+	opacity: 0;
+}
+
+.smenu a:hover:before {
+	opacity: 1;
+}
+
+.item:target .smenu {
+	max-height: 10em;
+}
