--- a/mystaticFiles/css/event_detail.css
+++ b/mystaticFiles/css/event_detail.css
@@ -1,72 +1,3 @@
-body{
-    margin: 0px;
-    padding: 0px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    box-sizing: border-box;
-}
-
-.basic{
-    background: #fff;    
-    padding: 5px;
-}
-
-/*===== title Bar=====*/
-#titleBar{
-    padding: 20px 100px;
-    height: 50px;
-    top: 0px;
-    
-}
-.header_links_container {
-    position: sticky;
-    -webkit-sticky: 80px;
-    height: 80px;
-    top: 0px;
-    background-color: white;
-}
-#logo{
-    height: 100%;
-}
-
-#navBar{
-    float: left;
-    padding: 0 50px;
-    height: 80px;
-}
-
-#navBar a{
-    font-size: 17px;
-    text-decoration: none;
-    padding: 15px 10px;
-    height: 100%;
-    text-align: center;
-    vertical-align: middle;
-    color: #696969;
-}
-
-#navbar a:hover {
-    background-image: linear-gradient(to right, #4867e0, #329fec);
-    color: white;
-    overflow: hidden;
-}
-
-.login_container {
-    text-align: center;
-    vertical-align: middle;
-    float: right;
-    margin-right: 100px;
-}
-
-#login_btn {
-    width: 150px;
-    height: 50px;
-    font-size: 120%;
-    border-radius: 0;
-    background-image: linear-gradient(to right, #4867e0 60%, #329fec);
-    border: none;
-    color: white;
-}
-
 .event_title_container {
     background-image: url(../media/event_title.jpg);
     height: 450px;
@@ -81,53 +12,37 @@ body{
     text-shadow: 5px 0 black;
 }
 
-.main_detail_container {
-    width: 100%;
-	background: #FFFFFF;
-	padding-top: 115px;
-	padding-bottom: 67px;
-	padding-left: 10%;
-    padding-right: 144px;
+/* ========== Evnet Search ===========*/
+
+#event_search{
+    padding: 10px 30px;
 }
 
-.parent_event_container {
-    width: 20%;
-    height: auto;
-    padding-top: 10px;
-    /* padding-left: 30px; */
-    border-style: inset;
-    border-radius: 20px;
-    border-color: royalblue;
-    min-width: 250px;
+#event_search .textbox{
+    width: 70%;
+    height: 50px;
+    border-radius: 4px;
+    padding: 5px 10px;
 }
 
-.parent_event_container {
-    float: left;
-}
-    
-#parent_detail {
-    font-size: 30px;
+#event_search .submitbtn{
+    height: 50px;
+    width: 25%;
     text-align: center;
+    vertical-align: middle;
+    background-image: linear-gradient(to right, #4867e0 60%, #329fec);
+    border: none;
+    color: white;
+}
+/*================= Events List ============== */
+
+.event_container{
+    padding: 30px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.child_event_container {
-    padding-left: 30px;
-    padding-bottom: 10px;
-}
-
-.child_event_list {
-    list-style: none;
-}
-
-
-/*===============================================================================================*/
-
-.eventDetailWrapper{
-    display: none;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0,0,0,.1);
+.event_container .eventbox{
+    padding: 5px 30px;
+    
 }
