--- a/static/css/EventWebSite/registration.css
+++ b/static/css/EventWebSite/registration.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 #titleBar{
@@ -41,6 +42,7 @@ body {
     background-color: rgba(255, 255, 255, 0.6);
     padding: 25px;
     border-radius: 25px;
+    max-width: 680px;
 }
 
 #reg_form th, td{
