--- a/static/css/EventWebSite/homepage.css
+++ b/static/css/EventWebSite/homepage.css
@@ -1,18 +1,20 @@
-/*===== slideshow =====*/
-#slideshow{
+/*===== General ======*/
+.middle_content{
+    padding: 10px 20px;
+}
+
+/*===== Main Image =====*/
+
+#main_image img{
     width: 100%;
-    height: 50px;
+    height: auto;
+    max-height: 750px;
 }
-
-#slideshow img{
-    width: 200px;
-}
-
 
 /*===== news =====*/
 #news{
     background-color: wheat;
-    padding: 10px 30px;
+    /* padding: 10px 30px; */
 }
 
 #news ul{
@@ -23,13 +25,12 @@
     padding: 7px 5px;
 }
 
-#news ul li a{
-    text-decoration: none;
+#news ul li a{    
     text-decoration: none;
     color: #000000;
 }
 
-/*================== About Us====================*/
+/*================== About Us ====================*/
 
 .aboutus_title {
     text-align: center;
@@ -37,22 +38,17 @@
     color: #696969;
 }
 
-.aboutus_title #aboutus_content{
-    width: 100%;
-    font-size: 25px; 
+#aboutus_content{
+    font-size: 25px;
     color:black;
+    text-align: center;
 }
 
 /*====sponsers====*/
 
-.sponsers_container {
-    width: 100%;
-	background: #FFFFFF;
-	padding: 20px;
-    display: flex;
-    flex-flow: wrap;
-    justify-content: center; 
-}   
+#sponsers{
+    margin-top: 50px;
+}
 
 .sponsers_title {
     text-align: center;
@@ -60,19 +56,23 @@
     color: #696969;
 }
 
+.sponsers_container {
+	background: #FFFFFF;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center; 
+}
+
 .sponser_item img{
     width: 300px;
     height: 150px;
     text-align: center;
-    padding-right: 100px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    padding-left: 100px;
+    padding: 30px 70px;
 }
 
 /*======================Contact=======================*/
 
-hr{
+#contact_us_container hr{
     border-style: solid;
     border-width: 3px;
     margin-left: 5px;
@@ -80,8 +80,14 @@ hr{
 
 .contact_us_container {
     background-color: #0652DD;
-    padding: 20px 50px 20px 50px;
+    padding: 20px 50px;
     color: #fff;
+}
+
+.contact_data{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .contact {
